# companion

./: Dockerfile  docker-compose.yml  pyproject.toml
configurations/: prompts.yml
src/: conversations.py  interface.py  models.py
tests/: embed.py
utils/: dbms.py  fms.py
